--- a/index.html
+++ b/index.html
@@ -9188,7 +9188,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="לילי [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9208,7 +9208,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200308105117732" title="$:/temp/search">
+<div created="20161023184814872" modified="20200308111031620" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9628,7 +9628,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200308105300066" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200308121024740" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -15071,7 +15071,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[A December`s night]]&gt;&gt;
 </pre>
 </div>
-<div created="20171219223133813" modified="20200212214218909" tags="[[מטא בדיון]] [[ילדים חד הוריים]] בתים ילדים" title="לילי">
+<div created="20171219223133813" modified="20200308112237790" tags="[[ילדים חד הוריים]] בתים ילדים אימהות" title="לילי">
 <pre>[img[pictures/lily.jpg]]
 
 
@@ -15084,105 +15084,169 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 
-
+&lt;&lt;englink [[Lily]]&gt;&gt;
 
 </pre>
 </div>
-<div created="20180101171912995" modified="20180112094204397" tags="לילי" title="לילי 01">
+<div created="20180101171912995" modified="20200308112628579" tags="לילי" title="לילי 01">
 <pre>[img[pictures/lily-1.jpg]]
 
 זה היה ב 21.12.2017
 
-[[יצאתי כמידי יום|https://www.youtube.com/watch?v=caPNrh82AvY]], לבושה ומצוידת ליום לימודים. המטפלת החדשה מלווה אותי. נכנסתי לחצר בית הספר, חיכיתי קצת, חזרתי לחצר הורי, ואספתי מהמחסן את התיק שהכנתי יום קודם.</pre>
+[[יצאתי כמידי יום|https://www.youtube.com/watch?v=caPNrh82AvY]], לבושה ומצוידת ליום לימודים. המטפלת החדשה מלווה אותי. נכנסתי לחצר בית הספר, חיכיתי קצת, חזרתי לחצר הורי, ואספתי מהמחסן את התיק שהכנתי יום קודם.
+
+
+&lt;&lt;englink [[Lily 01]]&gt;&gt;</pre>
 </div>
-<div created="20180105150125509" modified="20180112163937797" tags="לילי" title="לילי 02">
+<div created="20180105150125509" modified="20200308112817071" tags="לילי" title="לילי 02">
 <pre>[img[pictures/lily-2.jpg]]
 
-בתיק היו לי: 5 חטיפי אנרגיה, בקבוק מים, 2 חולצות ארוכות וחמות, 2 זוגות תחתונים, זוג מכנסי טרנינג, כלי רחצה, והרבה שטרות כסף שלקחתי ממכנסיו של אבי. הדרכון כבר היה עלי.</pre>
+בתיק היו לי: 5 חטיפי אנרגיה, בקבוק מים, 2 חולצות ארוכות וחמות, 2 זוגות תחתונים, זוג מכנסי טרנינג, כלי רחצה, והרבה שטרות כסף שלקחתי ממכנסיו של אבי. הדרכון כבר היה עלי.
+
+
+&lt;&lt;englink [[Lily 02]]&gt;&gt;</pre>
 </div>
-<div created="20180107133148881" modified="20180107133240428" tags="לילי" title="לילי 03">
+<div created="20180107133148881" modified="20200308113025324" tags="לילי" title="לילי 03">
 <pre>[img[pictures/lily-3.jpg]]
 
-כל ארבעת הכיסים של המכנסיים של אבא שלי היו תמיד תפוחים מחבילות של שטרות כסף בצבעים שונים, ותמיד הוא היה תולה אותם בכניסה לחדר האמבטיה.</pre>
+כל ארבעת הכיסים של המכנסיים של אבא שלי היו תמיד תפוחים מחבילות של שטרות כסף בצבעים שונים, ותמיד הוא היה תולה אותם בכניסה לחדר האמבטיה.
+
+
+
+&lt;&lt;englink [[Lily 03]]&gt;&gt;</pre>
 </div>
-<div created="20180112171139383" modified="20180112171357707" tags="לילי" title="לילי 04">
+<div created="20180112171139383" modified="20200308113430655" tags="לילי" title="לילי 04">
 <pre>[img[pictures/lily-4.jpg]]
 
-את התכנית לברוח תכננתי במשך כשישה חודשים.</pre>
+את התכנית לברוח תכננתי במשך כשישה חודשים.
+
+
+
+&lt;&lt;englink [[Lily 04]]&gt;&gt;</pre>
 </div>
-<div created="20180113204910549" modified="20180113205008534" tags="לילי" title="לילי 05">
+<div created="20180113204910549" modified="20200308113741407" tags="לילי" title="לילי 05">
 <pre>[img[pictures/lily-5.jpg]]
 
-את הרעיון קיבלתי מתכנית שראיתי יום אחד בטלוויזיה עם סבתי.</pre>
+את הרעיון קיבלתי מתכנית שראיתי יום אחד בטלוויזיה עם סבתי.
+
+
+
+&lt;&lt;englink [[Lily 05]]&gt;&gt;</pre>
 </div>
-<div created="20180125182319734" modified="20180126104611449" tags="לילי" title="לילי 06">
+<div created="20180125182319734" modified="20200308114141688" tags="לילי" title="לילי 06">
 <pre>[img[pictures/lily-6.jpg]]
 
-בהתחלה קראתי מידע שיכול לעזור לי, עברתי על פני מקומות בעולם עד שהחלטתי שאחפש לי אימא בפריז, איסלנד או מכסיקו.</pre>
+בהתחלה קראתי מידע שיכול לעזור לי, עברתי על פני מקומות בעולם עד שהחלטתי שאחפש לי אימא בפריז, איסלנד או מכסיקו.
+
+
+
+&lt;&lt;englink [[Lily 06]]&gt;&gt;</pre>
 </div>
-<div created="20180126105633010" modified="20180126110336361" tags="לילי" title="לילי 07">
+<div created="20180126105633010" modified="20200308114409371" tags="לילי" title="לילי 07">
 <pre>[img[pictures/lily-7.jpg]]
 
 
 את הטיסה קבעתי לשעות הבוקר, כך שבשעה בה אני אמורה לסיים את הלימודים כבר אהיה עם אדל. קבעתי עם נהג מונית אתו הסתמסתי כמה ימים קודם – בשם אמי, שבשמה גם כתבתי פתק שנועד לו ופתק אותו ייתן הנהג [[לנטע|נטע]].
+
+
+&lt;&lt;englink [[Lily 07]]&gt;&gt;
 </pre>
 </div>
-<div created="20180126141443234" modified="20180316203703720" tags="לילי" title="לילי 08">
+<div created="20180126141443234" modified="20200308114625817" tags="לילי" title="לילי 08">
 <pre>[img[pictures/lily-8.jpg]]
 בשדה התעופה פגשנו את [[נטע]], אישה נחמדה, שהכרתי דרך אתר להורים שמחפשים מלווה טיסות לילדים. גם לה כתבתי בשם הורי העסוקים. נהג המונית נתן לה את הפתק בו היה כתוב:
 
 נטע שלום רב,
 לא הספקנו להמיר כסף, נודה לך אם תוכלי לעשות זאת עבורנו
 וכן מודים לך על הכל, נסיעה טובה. אנו בטוחים כי תמצאי את לילי שלנו ילדה אחראית ונוחה. 
-</pre>
+
+
+
+
+&lt;&lt;englink [[Lily 08]]&gt;&gt;</pre>
 </div>
-<div created="20180126160253354" modified="20180126160354529" tags="לילי" title="לילי 09">
+<div created="20180126160253354" modified="20200308114940184" tags="לילי" title="לילי 09">
 <pre>[img[pictures/lily-9.jpg]]
 
 
 כשהייתי בת ארבע ידעתי קרוא וכתוב, ובגיל חמש ידעתי לכתוב בכתב יד שנראה כשל אדם בוגר.
-</pre>
+
+
+
+
+
+&lt;&lt;englink [[Lily 09]]&gt;&gt;</pre>
 </div>
-<div created="20180126161417831" modified="20180221163134374" tags="לילי" title="לילי 10">
+<div created="20180126161417831" modified="20200308115158131" tags="לילי" title="לילי 10">
 <pre>[img[pictures/lily-10.jpg]]
 
-במציאות [[נטע]] הייתה יפה ונעימה אפילו יותר מאשר בתמונות.</pre>
+במציאות [[נטע]] הייתה יפה ונעימה אפילו יותר מאשר בתמונות.
+
+
+&lt;&lt;englink [[Lily 10]]&gt;&gt;
+
+</pre>
 </div>
-<div created="20180129114351283" modified="20180129114454326" tags="לילי" title="לילי 11">
+<div created="20180129114351283" modified="20200308115428185" tags="לילי" title="לילי 11">
 <pre>[img[pictures/lily-11.jpg]]
 
-הטיסה עברה בקלות.</pre>
+הטיסה עברה בקלות.
+
+
+&lt;&lt;englink [[Lily 11]]&gt;&gt;
+</pre>
 </div>
-<div created="20180219183213816" modified="20180219183645035" tags="לילי" title="לילי 12">
+<div created="20180219183213816" modified="20200308115707185" tags="לילי" title="לילי 12">
 <pre>[img[pictures/lily-12.jpg]]
 
 בשדה התעופה באיסלנד חיכתה לי אדל – אותה בחרתי להיות לי לאם מאמצת, דרך סוכנות בינלאומית לאימוץ בינאישי. הכל בה מצא חן בעיני ובנוסף היה לה חתול.
+
+
+&lt;&lt;englink [[Lily 12]]&gt;&gt;
 </pre>
 </div>
-<div created="20180220132219849" modified="20180905123216951" tags="לילי [[מטא בדיון]]" title="לילי 13">
+<div created="20180220132219849" modified="20200308115952150" tags="לילי [[מטא בדיון]]" title="לילי 13">
 <pre>[img[pictures/lily-13.jpg]]
 
-שתינו קפה עם נטע שחיכתה לטיסה לפריז, שם התארחה כמה ימים אצל [[חבר ילדות|יויו]]. משם היא נסעה להודו. אנחנו נסענו הבייתה.</pre>
+שתינו קפה עם נטע שחיכתה לטיסה לפריז, שם התארחה כמה ימים אצל [[חבר ילדות|יויו]]. משם היא נסעה להודו. אנחנו נסענו הבייתה.
+
+
+&lt;&lt;englink [[Lily 13]]&gt;&gt;
+
+</pre>
 </div>
-<div created="20180228211946743" modified="20190617134120575" tags="לילי בתים מטבחים" title="לילי 14">
+<div created="20180228211946743" modified="20200308120228291" tags="לילי בתים מטבחים" title="לילי 14">
 <pre>[img[pictures/lily-14.jpg]]
 
-אדל תומפסון היא אישה מקסימה ונפלאה. היא קרמיקאית, והיא מכינה כלים מאד יפים ונעימים למגע ולאכילה.</pre>
+אדל תומפסון היא אישה מקסימה ונפלאה. היא קרמיקאית, והיא מכינה כלים מאד יפים ונעימים למגע ולאכילה.
+
+
+
+
+&lt;&lt;englink [[Lily 14]]&gt;&gt;</pre>
 </div>
-<div created="20180302154738562" modified="20180504115200690" tags="לילי" title="לילי 15">
+<div created="20180302154738562" modified="20200308120525825" tags="לילי" title="לילי 15">
 <pre>[img[pictures/lily-15.jpg]]
 
-שבועיים אחרי הגיעו הורי הביולוגים לאיסלנד זועמים על אדל. סוקי החתול שלנו היה בהיכון על הפסנתר כשעצרתי אותם, ביקשתי מהם לשבת על הספה בסלון ביתנו, ואמרתי להם שכתוב [[באמנת זכויות הילד|https://he.wikipedia.org/wiki/%D7%90%D7%9E%D7%A0%D7%AA_%D7%96%D7%9B%D7%95%D7%99%D7%95%D7%AA_%D7%94%D7%99%D7%9C%D7%93]] שעליהם להקשיב לחוות דעתי.</pre>
+שבועיים אחרי הגיעו הורי הביולוגים לאיסלנד זועמים על אדל. סוקי החתול שלנו היה בהיכון על הפסנתר כשעצרתי אותם, ביקשתי מהם לשבת על הספה בסלון ביתנו, ואמרתי להם שכתוב [[באמנת זכויות הילד|https://he.wikipedia.org/wiki/%D7%90%D7%9E%D7%A0%D7%AA_%D7%96%D7%9B%D7%95%D7%99%D7%95%D7%AA_%D7%94%D7%99%D7%9C%D7%93]] שעליהם להקשיב לחוות דעתי.
+
+
+
+
+&lt;&lt;englink [[Lily 15]]&gt;&gt;</pre>
 </div>
-<div created="20180304160006578" modified="20180306102621856" tags="לילי" title="לילי 16">
+<div created="20180304160006578" modified="20200308120756818" tags="לילי" title="לילי 16">
 <pre>[img[pictures/lily-16.jpg]]
 
 הם ישבו והקשיבו:
 
 כשהייתי בת ארבע והתחלתי לקרוא, הבנתי שישנם אנשים בעולם הזה שמאד רוצים ילדים אך מסיבות טכניות אין להם. לעומתכם, שטכנית לא הייתה לכם כל בעיה וכך גם גידלתם אותי. אני מתוחזקת ומתופעלת לעילא בביתכם, עם מיטב המטפלות והמבשלות ותודה לכם על ההשכלה הרחבה. אך לאחר שגיליתי שמימי עומדת לעזוב – מסיבות טכניות כמובן – עם בעלה שקיבל עבודה חדשה במקום מרוחק, הבנתי שמספיק. לא בא לי יותר. לא רוצה. אני ילדה שרוצה אהבה ושמחת חיים ושהוריה יראו אותה. כך בעזרת הטכנלוגיה והאינטואיציה חיפשתי ומצאתי את אדל שהיא אומנם - טכנית, לא הביאה אותי לעולם הזה, אך רגשית נפשית פיזית היא כל כולה שלי ואני שלה ואין כל סיכוי שאני חוזרת אליכם, פשוט לא. 
-</pre>
+
+
+
+&lt;&lt;englink [[Lily 16]]&gt;&gt;</pre>
 </div>
-<div created="20180306102632424" modified="20180308162235930" tags="לילי" title="לילי 17">
+<div created="20180306102632424" modified="20200308121047787" tags="לילי" title="לילי 17">
 <pre>[img[pictures/lily-17.jpg]]
 
 
@@ -15191,6 +15255,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 סוף
 
 [img[pictures/lily-17-1.jpg]]
+
+
+
+
+
+
+&lt;&lt;englink [[Lily 17]]&gt;&gt;
 </pre>
 </div>
 <div created="20191023054233757" modified="20200220174211780" tags="[[קופים ממונעים]] סרטים" title="לימונים">
