--- a/index.html
+++ b/index.html
@@ -9188,7 +9188,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="לילי [[האחיות כהן]]" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9208,7 +9208,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200308111031620" title="$:/temp/search">
+<div created="20161023184814872" modified="20200308122517059" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9628,7 +9628,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200308121024740" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200308123135295" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -14656,14 +14656,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180101172047473" modified="20180316115618571" tags="[[חיות אוכל]] ארוחות" title="כריסמס 2017">
+<div created="20180101172047473" modified="20200308122828471" tags="[[חיות אוכל]] ארוחות" title="כריסמס 2017">
 <pre>[img[pictures/christmas-2017.jpg]]
 
 !!![[גורה]]:
 
 לאחר שבכריסמס 2016 שחררנו את האחיות לחיק משפחותיהן הגרעיניות, קיימנו השנה שוב [[אצלנו|כוכב המשאלות 01]] את הארוחה שהייתה בסימן [[טבעונות|מתכונים טבעוניים]], לכבוד [[שראשל|ראשל]] הפכה טבעונית [[ונטע|נטע]] שהייתה אורחת כבוד. בצד המזרחי של השולחן היו המאכלים הבשריים, בצד המערבי הטבעוניים ובמרכז המאכלים הצמחוניים. היה מאד כיף, [[מרק]] ערבב לכולנו על הקרח וודקה סקנדינבית עם אוכמניות ושמפניה אייס וזה עבד. היו לא מעט מאכלים שאי אפשר בלתם [[מארוחת הכריסמס הקודמת|מתכוני ארוחת הכריסמס]], אבל גם היה [[פטה כבד|פטה כבד עוף]] ופרוסות קטנות מאד של לחם בריאות עם צימוקים. פוקצ'ות, [[חמאת שום|חמאת שום ועשבי תיבול]], [[פטה טבעוני]], [[אורז לבן|אורז לבן עם צנוברים]], כרובית בטורטיות, [[תבשיל ירקות]], סורבט, עוגת מוקה במהדורת כריסמס 2017, פנה-קוטה ומי יודע.. אכלנו כל כך הרבה.
 
-זו לא הייתה ארוחה דרמטית כמו קודמתה, היה סיכוי קלוש שדןדן יגיע עם דודו אבל זה לא קרה. לעומת זאת וסוף סוף אחרי שהתעלפו יחדיו על [[הסופרנוס]] ועוד [[סדרות]], [[יויו]] סיפר לנו שהתרחשה [[תהפוכת]], והוא [[ואנג'ליק|אנג'ליק]] התאחדו. כולנו שמחנו מאד והודנו שכולנו די כבר שמנו לב.</pre>
+זו לא הייתה ארוחה דרמטית כמו קודמתה, היה סיכוי קלוש שדןדן יגיע עם דודו אבל זה לא קרה. לעומת זאת וסוף סוף אחרי שהתעלפו יחדיו על [[הסופרנוס]] ועוד [[סדרות]], [[יויו]] סיפר לנו שהתרחשה [[תהפוכת]], והוא [[ואנג'ליק|אנג'ליק]] התאחדו. כולנו שמחנו מאד והודנו שכולנו די כבר שמנו לב.
+
+
+&lt;&lt;englink [[Christmas 2017]]&gt;&gt;</pre>
 </div>
 <div created="20170512222504639" modified="20200215164232944" tags="פעם" title="כשאמרו קסטה">
 <pre>''
@@ -14939,7 +14942,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Vegetarian lasagne]]&gt;&gt;
 </pre>
 </div>
-<div created="20181014115132718" modified="20181014160157265" tags="[[חיות אוכל]]" title="לחם">
+<div created="20181014115132718" modified="20200308123159542" tags="[[חיות אוכל]]" title="לחם">
 <pre>[img[pictures/lechem.jpg]]
 
 
@@ -14963,7 +14966,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 
-
+&lt;&lt;englink [[Bread]]&gt;&gt;
 
 
 
