--- a/english.html
+++ b/english.html
@@ -335,6 +335,8 @@ Error message and password prompt
 
 <li>Bolognese-alike</li>
 
+<li>Bread</li>
+
 <li>Cafe Müller</li>
 
 <li>Cannelloni</li>
@@ -376,6 +378,8 @@ Error message and password prompt
 <li>Chocolate chip cookies</li>
 
 <li>Chocolate fudge</li>
+
+<li>Christmas 2017</li>
 
 <li>Christmas dinner</li>
 
@@ -8968,7 +8972,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Lily [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9466,7 +9470,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
  &lt;&lt;heblink [[תרנגול הודו אפוי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200216150039212" modified="20200308120926159" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
+<div created="20200216150039212" modified="20200308122957530" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -9638,6 +9642,15 @@ The idea of the blue marble is the continuation of Iry's thoughts of [[the villa
 
  &lt;&lt;heblink [[כמולונז]]&gt;&gt;
 </pre>
+</div>
+<div created="20200308122901426" modified="20200308123026958" tags="[[Food addicts]]" title="Bread">
+<pre>
+[img[pictures/lechem.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[לחם]]&gt;&gt;</pre>
 </div>
 <div created="20200216183951936" modified="20200216184242348" tags="HH" title="Cafe Müller">
 <pre>[img[pictures/cafe-muller.jpg]]
@@ -9890,6 +9903,15 @@ Yours- Dandan.
 
  &lt;&lt;heblink [[שוקולד פאדג']]&gt;&gt;
 </pre>
+</div>
+<div created="20200308122622798" modified="20200308122737483" tags="Meals [[Food addicts]]" title="Christmas 2017">
+<pre>
+[img[pictures/christmas-2017.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[כריסמס 2017]]&gt;&gt;</pre>
 </div>
 <div created="20200115162658453" modified="20200115163052944" tags="Meals [[Food addicts]]" title="Christmas dinner">
 <pre>[img[pictures/aruchat-christmas.jpg]]
