--- a/english.html
+++ b/english.html
@@ -337,6 +337,8 @@ Error message and password prompt
 
 <li>Bread</li>
 
+<li>Breastplate sisters</li>
+
 <li>Cafe Müller</li>
 
 <li>Cannelloni</li>
@@ -830,8 +832,6 @@ Error message and password prompt
 <li>Powders</li>
 
 <li>Pride here</li>
-
-<li>Priestly breastplate sisters</li>
 
 <li>Prince</li>
 
@@ -8972,7 +8972,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Breastplate sisters]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8992,7 +8992,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200308100651584" title="$:/temp/search">
+<div created="20161023184814872" modified="20200308152621065" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9644,13 +9644,21 @@ The idea of the blue marble is the continuation of Iry's thoughts of [[the villa
 </pre>
 </div>
 <div created="20200308122901426" modified="20200308123026958" tags="[[Food addicts]]" title="Bread">
-<pre>
-[img[pictures/lechem.jpg]]
+<pre>[img[pictures/lechem.jpg]]
 
 
 
 
  &lt;&lt;heblink [[לחם]]&gt;&gt;</pre>
+</div>
+<div created="20200226104510035" modified="20200308152617099" tags="[[A friend]] [[Monkeys with car keys]]" title="Breastplate sisters">
+<pre>[img[pictures/achayot-la-choshen.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[אחיות לחושן]]&gt;&gt;</pre>
 </div>
 <div created="20200216183951936" modified="20200216184242348" tags="HH" title="Cafe Müller">
 <pre>[img[pictures/cafe-muller.jpg]]
@@ -9905,8 +9913,7 @@ Yours- Dandan.
 </pre>
 </div>
 <div created="20200308122622798" modified="20200308122737483" tags="Meals [[Food addicts]]" title="Christmas 2017">
-<pre>
-[img[pictures/christmas-2017.jpg]]
+<pre>[img[pictures/christmas-2017.jpg]]
 
 
 
@@ -11006,8 +11013,7 @@ Yes you- killing machines, exterminating and cancelling all that's not in your f
  &lt;&lt;heblink [[היסטריות]]&gt;&gt;</pre>
 </div>
 <div created="20200308101509939" modified="20200308101644634" tags="[[When they sleep]] Laundry [[On the road to somewhere]]" title="I do park">
-<pre>
-[img[pictures/ani-machna.jpg]]
+<pre>[img[pictures/ani-machna.jpg]]
 
 
 
@@ -11527,8 +11533,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 </pre>
 </div>
 <div created="20200308111731629" modified="20200308113335282" tags="Mothers [[Single parent children]] Children Houses" title="Lily">
-<pre>
-[img[pictures/lily.jpg]]
+<pre>[img[pictures/lily.jpg]]
 
 
 //Serial//
@@ -11549,16 +11554,14 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 </pre>
 </div>
 <div created="20200308112310936" modified="20200308112427892" tags="Lily" title="Lily 01">
-<pre>
-[img[pictures/lily-1.jpg]]
+<pre>[img[pictures/lily-1.jpg]]
 
 
 
  &lt;&lt;heblink [[לילי 01]]&gt;&gt;</pre>
 </div>
 <div created="20200308112456307" modified="20200308112732727" tags="Lily" title="Lily 02">
-<pre>
-[img[pictures/lily-2.jpg]]
+<pre>[img[pictures/lily-2.jpg]]
 
 
 
@@ -11569,8 +11572,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 </pre>
 </div>
 <div created="20200308112839302" modified="20200308112935663" tags="Lily" title="Lily 03">
-<pre>
-[img[pictures/lily-3.jpg]]
+<pre>[img[pictures/lily-3.jpg]]
 
 
 
@@ -11578,32 +11580,28 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
  &lt;&lt;heblink [[לילי 03]]&gt;&gt;</pre>
 </div>
 <div created="20200308113050893" modified="20200308113214245" tags="Lily" title="Lily 04">
-<pre>
-[img[pictures/lily-4.jpg]]
+<pre>[img[pictures/lily-4.jpg]]
 
 
 
  &lt;&lt;heblink [[לילי 04]]&gt;&gt;</pre>
 </div>
 <div created="20200308113458949" modified="20200308113625364" tags="Lily" title="Lily 05">
-<pre>
-[img[pictures/lily-5.jpg]]
+<pre>[img[pictures/lily-5.jpg]]
 
 
 
  &lt;&lt;heblink [[לילי 05]]&gt;&gt;</pre>
 </div>
 <div created="20200308113801161" modified="20200308113919866" tags="Lily" title="Lily 06">
-<pre>
-[img[pictures/lily-6.jpg]]
+<pre>[img[pictures/lily-6.jpg]]
 
 
 
  &lt;&lt;heblink [[לילי 06]]&gt;&gt;</pre>
 </div>
 <div created="20200308113934537" modified="20200308114240262" tags="Lily" title="Lily 07">
-<pre>
-[img[pictures/lily-7.jpg]]
+<pre>[img[pictures/lily-7.jpg]]
 
 
 
@@ -11611,8 +11609,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
  &lt;&lt;heblink [[לילי 07]]&gt;&gt;</pre>
 </div>
 <div created="20200308114434416" modified="20200308114534541" tags="Lily" title="Lily 08">
-<pre>
-[img[pictures/lily-8.jpg]]
+<pre>[img[pictures/lily-8.jpg]]
 
 
 
@@ -11621,8 +11618,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 </pre>
 </div>
 <div created="20200308114717517" modified="20200308114847842" tags="Lily" title="Lily 09">
-<pre>
-[img[pictures/lily-9.jpg]]
+<pre>[img[pictures/lily-9.jpg]]
 
 
 
@@ -11630,24 +11626,21 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 </pre>
 </div>
 <div created="20200308115004328" modified="20200308115108977" tags="Lily" title="Lily 10">
-<pre>
-[img[pictures/lily-10.jpg]]
+<pre>[img[pictures/lily-10.jpg]]
 
 
 
  &lt;&lt;heblink [[לילי 10]]&gt;&gt;</pre>
 </div>
 <div created="20200308115210950" modified="20200308115318986" tags="Lily" title="Lily 11">
-<pre>
-[img[pictures/lily-11.jpg]]
+<pre>[img[pictures/lily-11.jpg]]
 
 
 
  &lt;&lt;heblink [[לילי 11]]&gt;&gt;</pre>
 </div>
 <div created="20200308115514588" modified="20200308115618189" tags="Lily" title="Lily 12">
-<pre>
-[img[pictures/lily-12.jpg]]
+<pre>[img[pictures/lily-12.jpg]]
 
 
 
@@ -11656,16 +11649,14 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 </pre>
 </div>
 <div created="20200308115719535" modified="20200308115854660" tags="Lily" title="Lily 13">
-<pre>
-[img[pictures/lily-13.jpg]]
+<pre>[img[pictures/lily-13.jpg]]
 
 
  &lt;&lt;heblink [[לילי 13]]&gt;&gt;
 </pre>
 </div>
 <div created="20200308120021129" modified="20200308120135236" tags="Lily Kitchens Houses" title="Lily 14">
-<pre>
-[img[pictures/lily-14.jpg]]
+<pre>[img[pictures/lily-14.jpg]]
 
 
 
@@ -11679,8 +11670,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 </pre>
 </div>
 <div created="20200308120319779" modified="20200308120417293" tags="Lily" title="Lily 15">
-<pre>
-[img[pictures/lily-15.jpg]]
+<pre>[img[pictures/lily-15.jpg]]
 
 
 
@@ -11688,8 +11678,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 </pre>
 </div>
 <div created="20200308120550769" modified="20200308120651474" tags="Lily" title="Lily 16">
-<pre>
-[img[pictures/lily-16.jpg]]
+<pre>[img[pictures/lily-16.jpg]]
 
 
 
@@ -11697,8 +11686,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 </pre>
 </div>
 <div created="20200308120826915" modified="20200308120955272" tags="Lily" title="Lily 17">
-<pre>
-[img[pictures/lily-17.jpg]]
+<pre>[img[pictures/lily-17.jpg]]
 
 
 
@@ -12535,15 +12523,6 @@ I feel so proud of my ghetto, after Friday’s morning, when I walked calmly in 
 
 
 </pre>
-</div>
-<div created="20200226104510035" modified="20200226104625744" tags="[[A friend]] [[Monkeys with car keys]]" title="Priestly breastplate sisters">
-<pre>[img[pictures/achayot-la-choshen.jpg]]
-
-
-
-
-
- &lt;&lt;heblink [[אחיות לחושן]]&gt;&gt;</pre>
 </div>
 <div created="20200213204850477" modified="20200213212548516" tags="[[Outer sisters]] Music Films" title="Prince">
 <pre>[img[pictures/prince.jpg]]
