--- a/index.html
+++ b/index.html
@@ -9188,7 +9188,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="[[אחיות לחושן]] אבינו [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9208,7 +9208,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200308122517059" title="$:/temp/search">
+<div created="20161023184814872" modified="20200308152641224" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10186,7 +10186,7 @@ well,
 &lt;&lt;englink [[Cat Sisters]]&gt;&gt;
 </pre>
 </div>
-<div created="20170612182534470" modified="20200226104724580" tags="[[קופים ממונעים]] חבר" title="אחיות לחושן">
+<div created="20170612182534470" modified="20200308152706260" tags="[[קופים ממונעים]] חבר" title="אחיות לחושן">
 <pre>[img[pictures/achayot-la-choshen.jpg]]
 
 !!![[יויו]]:
@@ -10199,7 +10199,7 @@ well,
 
 
 
-&lt;&lt;englink [[Priestly breastplate sisters]]&gt;&gt;</pre>
+&lt;&lt;englink [[Breastplate sisters]]&gt;&gt;</pre>
 </div>
 <div created="20170731120559711" modified="20200219200735654" tags="[[אירי טוענת]] [[אחיות חוץ]]" title="איזדורה דאנקן">
 <pre>[img[pictures/isadora-duncan.jpg]]
