--- a/english.html
+++ b/english.html
@@ -8963,7 +8963,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200306141658115" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200308170940719" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8972,7 +8972,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Breastplate sisters]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Lily [[Lily 17]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11532,14 +11532,14 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 
 </pre>
 </div>
-<div created="20200308111731629" modified="20200308113335282" tags="Mothers [[Single parent children]] Children Houses" title="Lily">
+<div created="20200308111731629" modified="20200308161838188" tags="Mothers [[Single parent children]] Children Houses" title="Lily">
 <pre>[img[pictures/lily.jpg]]
 
 
 //Serial//
 
 
-
+On my sixth birthday I walked out of my parents' home and never came back.
 
 
 &lt;&lt;list-links filter:&quot;[tag[Lily]]&quot;&gt;&gt;
@@ -11553,112 +11553,125 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 
 </pre>
 </div>
-<div created="20200308112310936" modified="20200308112427892" tags="Lily" title="Lily 01">
+<div created="20200308112310936" modified="20200308163112324" tags="Lily" title="Lily 01">
 <pre>[img[pictures/lily-1.jpg]]
 
-
+[[I walked out like it's a regular day|https://www.youtube.com/watch?v=caPNrh82AvY]], dressed and packed for a school day. The new nanny accompanied me. I went to the school playground, waited a little, went back to my parents' yard, and took the bag I pre-organized on the previous day from the garage.
 
  &lt;&lt;heblink [[לילי 01]]&gt;&gt;</pre>
 </div>
-<div created="20200308112456307" modified="20200308112732727" tags="Lily" title="Lily 02">
+<div created="20200308112456307" modified="20200308164104820" tags="Lily" title="Lily 02">
 <pre>[img[pictures/lily-2.jpg]]
 
 
-
+In my bag I had: 5 energy bars, a bottle of water, 2 long sleeved shirts, 2 pairs of underwear, a pair of sweatpants, toiletries and many money bills I took from my father's pants. The passport was already with me.
 
  &lt;&lt;heblink [[לילי 02]]&gt;&gt;
 
 
 </pre>
 </div>
-<div created="20200308112839302" modified="20200308112935663" tags="Lily" title="Lily 03">
+<div created="20200308112839302" modified="20200308164623105" tags="Lily" title="Lily 03">
 <pre>[img[pictures/lily-3.jpg]]
 
+
+The four pockets of my father's pants were always stuffed with money bills of different colors, and he always used to hang them in the entrance to the bathroom.  
 
 
 
  &lt;&lt;heblink [[לילי 03]]&gt;&gt;</pre>
 </div>
-<div created="20200308113050893" modified="20200308113214245" tags="Lily" title="Lily 04">
+<div created="20200308113050893" modified="20200308165015642" tags="Lily" title="Lily 04">
 <pre>[img[pictures/lily-4.jpg]]
 
-
+I planned the getaway for maybe six months
 
  &lt;&lt;heblink [[לילי 04]]&gt;&gt;</pre>
 </div>
-<div created="20200308113458949" modified="20200308113625364" tags="Lily" title="Lily 05">
+<div created="20200308113458949" modified="20200308165225220" tags="Lily" title="Lily 05">
 <pre>[img[pictures/lily-5.jpg]]
 
-
+I got the idea from a TV show I watched one day with my granny. 
 
  &lt;&lt;heblink [[לילי 05]]&gt;&gt;</pre>
 </div>
-<div created="20200308113801161" modified="20200308113919866" tags="Lily" title="Lily 06">
+<div created="20200308113801161" modified="20200308165729213" tags="Lily" title="Lily 06">
 <pre>[img[pictures/lily-6.jpg]]
 
-
+At first I read information that could help me, I looked at places around the world until I decided I would look up for a mother in Paris, Island or Mexico.
 
  &lt;&lt;heblink [[לילי 06]]&gt;&gt;</pre>
 </div>
-<div created="20200308113934537" modified="20200308114240262" tags="Lily" title="Lily 07">
+<div created="20200308113934537" modified="20200308170943115" tags="Lily" title="Lily 07">
 <pre>[img[pictures/lily-7.jpg]]
 
-
+I scheduled the flight for the morning, so at the time I'm supposed to finish school I'll already be with Adele. I texted a taxi driver in my mother's name, I also wrote a note in her name for the driver and a note which the taxi driver will bring [[Neta]]. 
 
 
  &lt;&lt;heblink [[לילי 07]]&gt;&gt;</pre>
 </div>
-<div created="20200308114434416" modified="20200308114534541" tags="Lily" title="Lily 08">
+<div created="20200308114434416" modified="20200308173509180" tags="Lily" title="Lily 08">
 <pre>[img[pictures/lily-8.jpg]]
 
+At the airport we met [[Neta]], a nice lady, who I met through a website for parents who look for a companion for their children's flight. I also wrote her in the name of my occupied parents. The taxi driver gave her the note that said:
+
+Hello Neta, we didn't have the time to exchange money, we would appreciate if you could do it for us and we thank you dearly, have a safe trip. We're sure you'll find our Lily responsible and easy-going.  
 
 
 
  &lt;&lt;heblink [[לילי 08]]&gt;&gt;
 </pre>
 </div>
-<div created="20200308114717517" modified="20200308114847842" tags="Lily" title="Lily 09">
+<div created="20200308114717517" modified="20200308173743950" tags="Lily" title="Lily 09">
 <pre>[img[pictures/lily-9.jpg]]
 
-
+When I was four I knew to read and to write, and at the age of five I had a hand writing that looked like an adult's. 
 
  &lt;&lt;heblink [[לילי 09]]&gt;&gt;
 </pre>
 </div>
-<div created="20200308115004328" modified="20200308115108977" tags="Lily" title="Lily 10">
+<div created="20200308115004328" modified="20200308173931280" tags="Lily" title="Lily 10">
 <pre>[img[pictures/lily-10.jpg]]
 
-
+In reality, Neta was even prettier and nicer than in the pictures.
 
  &lt;&lt;heblink [[לילי 10]]&gt;&gt;</pre>
 </div>
-<div created="20200308115210950" modified="20200308115318986" tags="Lily" title="Lily 11">
+<div created="20200308115210950" modified="20200308174126201" tags="Lily" title="Lily 11">
 <pre>[img[pictures/lily-11.jpg]]
 
-
+The flight passed by easily.
 
  &lt;&lt;heblink [[לילי 11]]&gt;&gt;</pre>
 </div>
-<div created="20200308115514588" modified="20200308115618189" tags="Lily" title="Lily 12">
+<div created="20200308115514588" modified="20200308174836162" tags="Lily" title="Lily 12">
 <pre>[img[pictures/lily-12.jpg]]
 
+At the airport in Island waited Adele, who I chose for an adopting mother, through an international agency of interpersonal adoption. I liked everything about her and in addition she had a cat.
 
 
  &lt;&lt;heblink [[לילי 12]]&gt;&gt;
 
 </pre>
 </div>
-<div created="20200308115719535" modified="20200308115854660" tags="Lily" title="Lily 13">
+<div created="20200308115719535" modified="20200308175306737" tags="Lily" title="Lily 13">
 <pre>[img[pictures/lily-13.jpg]]
+
+
+
+We had coffee with Neta who waited for a flight to Paris, where she stayed for several days at a [[childhood friend's|Yoyo]]. After that she went to India. We went home.
+
 
 
  &lt;&lt;heblink [[לילי 13]]&gt;&gt;
 </pre>
 </div>
-<div created="20200308120021129" modified="20200308120135236" tags="Lily Kitchens Houses" title="Lily 14">
+<div created="20200308120021129" modified="20200308175907924" tags="Lily Kitchens Houses" title="Lily 14">
 <pre>[img[pictures/lily-14.jpg]]
 
 
+
+Adele Thompson is a lovely wonderful lady. She's a ceramist, and she makes very beautiful dishes, that are pleasant to eat from and pleasant to hold.
 
 
 
@@ -11669,28 +11682,38 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 
 </pre>
 </div>
-<div created="20200308120319779" modified="20200308120417293" tags="Lily" title="Lily 15">
+<div created="20200308120319779" modified="20200308185132617" tags="Lily" title="Lily 15">
 <pre>[img[pictures/lily-15.jpg]]
 
+
+Two weeks after my biological parents arrived Island seething at Adele. Our cat Sookie sat ready on the piano when I stopped them, asked them to sit on the sofa in our living room, and told them that it's written in the [[convention on the rights of the child|https://en.wikipedia.org/wiki/Convention_on_the_Rights_of_the_Child]] that they need to listen to my opinion.
 
 
  &lt;&lt;heblink [[לילי 15]]&gt;&gt;
 </pre>
 </div>
-<div created="20200308120550769" modified="20200308120651474" tags="Lily" title="Lily 16">
+<div created="20200308120550769" modified="20200308191347913" tags="Lily" title="Lily 16">
 <pre>[img[pictures/lily-16.jpg]]
 
+They sat and listened:
+
+When I was four and started to read, I realized that some people in this world really want children but because of technical reasons they can't have them. As oppose to you, who technically could and that's how you raised me. I am being maintained and activated on the highest level at your house, with the best nannies and cooks and thank you for the good knowledge. But after I found out that Mimi is about to leave –out of technical reasons of course- with her husband who got a new job in a faraway land, I realized that enough is enough. I don't want it anymore. Just don't. I am a kid who wants love and happiness and her parents to see her. So with the help of technology and intuition I searched and found Adele who technically didn't bring me to this world, but mentally spiritually physically she's all mine and I'm all hers, and there's no chance I'm going back with you, just not.
 
 
  &lt;&lt;heblink [[לילי 16]]&gt;&gt;
 </pre>
 </div>
-<div created="20200308120826915" modified="20200308120955272" tags="Lily" title="Lily 17">
+<div created="20200308120826915" modified="20200308192500556" tags="Lily" title="Lily 17">
 <pre>[img[pictures/lily-17.jpg]]
 
 
 
+I finished speaking. They asked to talk in the side for a moment. They came back, looked at me and told me that they letting me stay at Adele's and that they need to think about it. Suddenly I felt sorry for them but I didn't take it back. I hugged them and promised to be in touch.  Adele told them that they are always welcome to visit. They went out, and we made chocolate milk.
 
+
+[img[pictures/lily-17-1.jpg]]
+
+The end
 
  &lt;&lt;heblink [[לילי 17]]&gt;&gt;
 </pre>
