--- a/english.html
+++ b/english.html
@@ -8972,7 +8972,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Pina Bausch]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8992,7 +8992,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200308152621065" title="$:/temp/search">
+<div created="20161023184814872" modified="20200312201813066" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12479,13 +12479,13 @@ Love him as a sister,
  &lt;&lt;heblink [[מלפפונים חמוצים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213181241224" modified="20200216183823842" tags="[[Outer sisters]] [[Iry claims]]" title="Pina Bausch">
+<div created="20200213181241224" modified="20200312201808724" tags="[[Outer sisters]] [[Iry claims]]" title="Pina Bausch">
 <pre>[img[pictures/pina-bausch.jpg]]
 
 
 !!![[Iry]]:
 
-[[Pina Bausch|https://en.wikipedia.org/wiki/Pina_Bausch]] and [[Tanztheater Wuppertal|http://www.pina-bausch.de/en/]] members dance. It can be a light running or normal walking or [[rond de jambeen lair|http://www.pina-bausch.de/en/]]
+[[Pina Bausch|https://en.wikipedia.org/wiki/Pina_Bausch]] and [[Tanztheater Wuppertal|http://www.pina-bausch.de/en/]] members dance. It can be a light running or normal walking or [[rond de jambe en l`air|http://www.pina-bausch.de/en/]]
 .
 [[This|https://www.youtube.com/watch?v=LA65HrIMrjs]], for example, is a piece that an ensemble's dancer brought after a vacation, and it got into [[Carnations|https://www.youtube.com/watch?v=CIrRR48s5As]]
 . 
