--- a/english.html
+++ b/english.html
@@ -709,6 +709,8 @@ Error message and password prompt
 
 <li>Marianne</li>
 
+<li>Marina Zoto</li>
+
 <li>Mark</li>
 
 <li>Marzipan balls</li>
@@ -925,6 +927,8 @@ Error message and password prompt
 
 <li>Spiral Spring</li>
 
+<li>Stalin's basement</li>
+
 <li>Steve Buscemi</li>
 
 <li>Stories I`ve told Norma</li>
@@ -991,6 +995,8 @@ Error message and password prompt
 
 <li>The neighbor`s grass</li>
 
+<li>The newspaper desk</li>
+
 <li>The real Dod</li>
 
 <li>The relief is down the road</li>
@@ -1046,6 +1052,8 @@ Error message and password prompt
 <li>TV</li>
 
 <li>TV Series</li>
+
+<li>Umbrella car</li>
 
 <li>Urban Nature</li>
 
@@ -8972,7 +8980,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Pina Bausch]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8992,7 +9000,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200312201813066" title="$:/temp/search">
+<div created="20161023184814872" modified="20200313121100589" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9470,7 +9478,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
  &lt;&lt;heblink [[תרנגול הודו אפוי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200216150039212" modified="20200308122957530" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
+<div created="20200216150039212" modified="20200313121702807" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -11791,6 +11799,18 @@ For example, it seethes me when people use words purposelessly, like the word lo
  &lt;&lt;heblink [[מריאן]]&gt;&gt;
 </pre>
 </div>
+<div created="20200313120734731" modified="20200313120900837" tags="HH" title="Marina Zoto">
+<pre>
+
+[img[pictures/marina-zuto.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[מרינה זוטו]]&gt;&gt;
+
+</pre>
+</div>
 <div created="20200219173118907" modified="20200219173216593" tags="[[Coen sister]]" title="Mark">
 <pre>[img[pictures/mark1.jpg]]
 
@@ -13051,6 +13071,21 @@ And I say:
  &lt;&lt;heblink [[קפיץ ספירלי]]&gt;&gt;
 </pre>
 </div>
+<div created="20200313121234753" modified="20200313121413548" tags="HH" title="Stalin's basement">
+<pre>
+
+@@.center.ltr
+[img[למצולמים אין קשר|https://farm4.staticflickr.com/3459/3363312260_b02869fff2_z_d.jpg]]
+
+([[cc|https://creativecommons.org/licenses/by-nc-sa/2.0/]]) [[Timo Heuer|https://www.flickr.com/photos/upim/3363312260]]
+@@
+
+
+
+ &lt;&lt;heblink [[המרתף של סטלין]]&gt;&gt;
+
+</pre>
+</div>
 <div created="20200218202232757" modified="20200218205624549" tags="[[Outer sisters]] Films [[The Sopranos]] TV [[TV Series]]" title="Steve Buscemi">
 <pre>[img[pictures/steve-buscemi.jpg]]
 
@@ -13457,6 +13492,15 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
 
 
  &lt;&lt;heblink [[הדשא של השכן]]&gt;&gt;</pre>
+</div>
+<div created="20200313120244325" modified="20200313120604720" tags="HH" title="The newspaper desk">
+<pre>
+[img[pictures/maarechet-haiton.jpg]]
+
+
+
+
+&lt;&lt;heblink [[מערכת העיתון]]&gt;&gt;</pre>
 </div>
 <div created="20200225165427271" modified="20200225165740497" tags="[[Outer sisters]] Music Metafiction" title="The real Dod">
 <pre>[img[pictures/hadod-haamiti.jpg]]
@@ -13959,6 +14003,15 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 
 
 
+</pre>
+</div>
+<div created="20200313121609318" modified="20200313121724973" tags="[[Dreams that we've dreamt]] Children" title="Umbrella car">
+<pre>
+[img[pictures/oto-mitriya.jpg]]
+
+
+
+ &lt;&lt;heblink [[אוטו מטריה]]&gt;&gt;
 </pre>
 </div>
 <div created="20200226064334395" modified="20200226064504279" tags="[[Here in the Ghetto]] Music [[True stories]]" title="Urban Nature">
