--- a/index.html
+++ b/index.html
@@ -9188,7 +9188,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="לילי [[לילי 17]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9208,7 +9208,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200308160656414" title="$:/temp/search">
+<div created="20161023184814872" modified="20200313121633944" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9628,7 +9628,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200308123135295" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200313121752626" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10094,7 +10094,7 @@ well,
 &quot;את מבינה אווה, אבא נתן לי את הבטחתו, ועכשיו הוא יראה מי מאלף את מי בבית הזה&quot;.
 </pre>
 </div>
-<div created="20170422193053700" modified="20190219161517918" tags="[[חלומות שחלמנו]] ילדים" title="אוטו מטריה">
+<div created="20170422193053700" modified="20200313121820467" tags="[[חלומות שחלמנו]] ילדים" title="אוטו מטריה">
 <pre>[img[pictures/oto-mitriya.jpg]]
 
 !!![[אירי]]:
@@ -10102,6 +10102,11 @@ well,
 בילדותי, המרחק מבית הורי לבית הספר היסודי, היה משהו כמו 400 מטרים, הכוללים שלוש פניות.
 
 בקיץ זו לא הייתה בעיה, וגם היו לי אופניים, אבל בחורף תמיד [[חלמתי|דעתניות]] שיש לי אוטו-תלת אופן, עם כיסוי בצורת מטריה ענקית שקופה.
+
+
+
+
+&lt;&lt;englink [[Umbrella car]]&gt;&gt;
 </pre>
 </div>
 <div created="20190506090411968" modified="20190506093453754" tags="[[כאן בגטו]]" title="אופטיקה בליסימה">
@@ -11969,13 +11974,11 @@ Is where I want to be
 
 &lt;&lt;englink [[2 Da Vinci ]]&gt;&gt;</pre>
 </div>
-<div created="20200303102502696" modified="20200306130355307" tags="[[קופים ממונעים]] ילדים" title="דור הנפש">
+<div created="20200303102502696" modified="20200313105315846" tags="[[קופים ממונעים]] ילדים" title="דור הנפש">
 <pre>[img[pictures/mental-generation.jpg]]
 
 
 [[גורה]]:
-
-
 
 
 [[SLAM MENTAL|https://www.youtube.com/watch?v=lldS41Px5_s]]
@@ -12775,7 +12778,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 המצלמה היא הסטורי טלר של [[HH]].</pre>
 </div>
-<div created="20161024204444942" modified="20180704183752471" tags="בתים HH" title="המרתף של סטלין">
+<div created="20161024204444942" modified="20200313121533376" tags="בתים HH" title="המרתף של סטלין">
 <pre>בקומה מינוס 1 של [[געזונטהייטס]] מתגורר [[סטלין]] השרת. כאן נמצאים כל כלי העבודה ואמצעי הייצור שלו: ממטאטאים ומצלמות אבטחה רזרביות ועד ל[[שָה נוּאָר]], השרת שמארח את
 ה[[וויקי|https://he.wikipedia.org/wiki/%D7%95%D7%99%D7%A7%D7%99]]
 של [[האחיות כהן]].
@@ -12784,7 +12787,13 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 [img[למצולמים אין קשר|https://farm4.staticflickr.com/3459/3363312260_b02869fff2_z_d.jpg]]
 
 ([[cc|https://creativecommons.org/licenses/by-nc-sa/2.0/]]) [[Timo Heuer|https://www.flickr.com/photos/upim/3363312260]]
-@@</pre>
+@@
+
+
+
+
+&lt;&lt;englink [[Stalin's basement]]&gt;&gt;
+</pre>
 </div>
 <div created="20161218221618167" modified="20200223185943876" tags="[[קופים ממונעים]]" title="המשק האוטרקי שלנו">
 <pre>[img[pictures/hameshek-shelanoo.jpg]]
@@ -15914,7 +15923,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 במספרה נמצאת [[אנה|הספרית]], שידיה ידי זהב.</pre>
 </div>
-<div created="20170320163938974" modified="20170507182433222" tags="HH" title="מערכת העיתון">
+<div created="20170320163938974" modified="20200313120707620" tags="HH" title="מערכת העיתון">
 <pre>[img[pictures/maarechet-haiton.jpg]]
 
 !!![[גורה]]:
@@ -15923,7 +15932,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 הם שמים דגש על הצילומים והעיצוב.
 
-בקצה החלל הפתוח יש חדר אוכל צבעוני, גם בו נוהגים העובדים לשבת ולעבוד.</pre>
+בקצה החלל הפתוח יש חדר אוכל צבעוני, גם בו נוהגים העובדים לשבת ולעבוד.
+
+
+
+&lt;&lt;englink [[The newspaper desk]]&gt;&gt;</pre>
 </div>
 <div created="20181026164355462" modified="20200219131813762" tags="[[כאן בגטו]] [[מטא בדיון]]" title="מערכת תל אביב">
 <pre>[img[pictures/maarechet-tel-aviv.jpg]]
@@ -15989,7 +16002,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Marianne]]&gt;&gt;</pre>
 </div>
-<div created="20161024181726961" modified="20170802142408135" tags="HH" title="מרינה זוטו">
+<div created="20161024181726961" modified="20200313121001287" tags="HH" title="מרינה זוטו">
 <pre>פרוייקט [[דיור מוגז]] ב[[ים טתיס]]
 
 [img[pictures/marina-zuto.jpg]]
@@ -15998,7 +16011,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 מרינה זוטו היא חלק נוסף בתצרף המוקפד של הדיור המוגז של [[מצפה ראשית]] שליד אסדת טתיס.
 
-המודל לקוח [[מספרינגפילד|https://he.wikipedia.org/wiki/%D7%A1%D7%A4%D7%A8%D7%99%D7%A0%D7%92%D7%A4%D7%99%D7%9C%D7%93_(%D7%9E%D7%A9%D7%A4%D7%97%D7%AA_%D7%A1%D7%99%D7%9E%D7%A4%D7%A1%D7%95%D7%9F)]], ולמעט כרסום חלקים משלושה יערות, וכתישת שוניות אלמוגים לא נעשה כל נזק נראה לעין לסביבה.</pre>
+המודל לקוח [[מספרינגפילד|https://he.wikipedia.org/wiki/%D7%A1%D7%A4%D7%A8%D7%99%D7%A0%D7%92%D7%A4%D7%99%D7%9C%D7%93_(%D7%9E%D7%A9%D7%A4%D7%97%D7%AA_%D7%A1%D7%99%D7%9E%D7%A4%D7%A1%D7%95%D7%9F)]], ולמעט כרסום חלקים משלושה יערות, וכתישת שוניות אלמוגים לא נעשה כל נזק נראה לעין לסביבה.
+
+
+
+
+&lt;&lt;englink [[Marina Zoto]]&gt;&gt;</pre>
 </div>
 <div created="20170331201741562" modified="20200219173306289" tags="[[אחות כהן]]" title="מרק">
 <pre>[img[pictures/mark1.jpg]]
@@ -16483,7 +16501,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Steve Buscemi]]&gt;&gt;</pre>
 </div>
-<div created="20161026224824040" modified="20180213183433507" tags="HH [[מטא בדיון]]" title="סטלין">
+<div created="20161026224824040" modified="20200313121248616" tags="HH [[מטא בדיון]]" title="סטלין">
 <pre>@@.center
 
 [img width=200 [למצולמים אין קשר|https://upload.wikimedia.org/wikipedia/commons/4/41/Lev_Trotsky.jpg]]
